Criando elementos principais da página

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Decodificador de Texto</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Decodificador de Texto</h1>
+    </header>
+    <main>
+       <section>
+            <textarea name="" id="" placeholder="Digite seu texto"></textarea>
+            <div>
+                <img src="assets/bi_exclamation-circle-fill.png" alt="Circulo com ponto de interrogação">
+                <p>Apenas letras minúsculas e sem acento.</p>
+            </div>
+            <div>
+                <button>Criptografar</button>
+                <button>Descriptografar</button>
+            </div>
+       </section>
+       <section>
+            <img src="assets/High-quality-products.svg" alt="Desenho de um boneco olhando para o diamante através de uma lupa">
+            <h2>Nenhuma mensagem encontrada</h2>
+            <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+       </section>
+
+    </main>
+    <footer>
+        <p>Desenvolvido por <a href="">Alisson Moreira</a></p>
+    </footer>
 </body>
 </html>
