--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Decodificador de Texto</title>
 </head>
 <body>
     <header>
         <h1>Decodificador de Texto</h1>
     </header>
-    <main>
-       <section>
+    <main class="conteudos">
+       <section class="conteudo_1">
             <textarea name="" id="" placeholder="Digite seu texto"></textarea>
             <div>
-                <img src="assets/bi_exclamation-circle-fill.png" alt="Circulo com ponto de interrogação">
-                <p>Apenas letras minúsculas e sem acento.</p>
-            </div>
-            <div>
-                <button>Criptografar</button>
-                <button>Descriptografar</button>
+                <div class="texto_informativo">
+                    <img src="assets/bi_exclamation-circle-fill.png" alt="Circulo com ponto de interrogação">
+                    <p>Apenas letras minúsculas e sem acento.</p>
+                </div>
+                <div class="grupo_botoes">
+                    <button class="botao botao_primario">Criptografar</button>
+                    <button class="botao botao_secundario">Descriptografar</button>
+                </div>
             </div>
        </section>
-       <section>
+       <section class="conteudo_2">
             <img src="assets/High-quality-products.svg" alt="Desenho de um boneco olhando para o diamante através de uma lupa">
-            <h2>Nenhuma mensagem encontrada</h2>
-            <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+            <div>
+                <h2>Nenhuma mensagem encontrada</h2>
+                <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+            </div>
        </section>
 
     </main>
