--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="conteudos">
        <section class="conteudo_1">
-            <textarea name="" id="myText" placeholder="Digite seu texto"></textarea>
+            <textarea name="" id="text" placeholder="Digite seu texto" rows="16"></textarea>
             <div>
                 <div class="texto_informativo">
                     <img src="assets/bi_exclamation-circle-fill.png" alt="Circulo com ponto de interrogação">
