Atualiza o cabeçalho, textarea e estiliza alguns elementos

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Decodificador de Texto</title>
 </head>
 <body>
-    <header>
-        <h1>Decodificador de Texto</h1>
-    </header>
     <main class="conteudos">
+        <header> <img src="assets/alura.svg" alt="Logo marca Alura"></header>
        <section class="conteudo_1">
-            <textarea name="" id="text" placeholder="Digite seu texto" rows="16"></textarea>
+            <textarea name="" id="texto_entrada" placeholder="Digite seu texto" rows=""></textarea>
             <div>
                 <div class="texto_informativo">
                     <img src="assets/bi_exclamation-circle-fill.png" alt="Circulo com ponto de interrogação">
