--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p>Apenas letras minúsculas e sem acento.</p>
                 </div>
                 <div class="grupo_botoes">
-                    <button class="botao botao_primario">Criptografar</button>
+                    <button class="botao botao_primario" onclick="criptografar()">Criptografar</button>
                     <button class="botao botao_secundario">Descriptografar</button>
                 </div>
             </div>
@@ -34,5 +34,6 @@
     <footer>
         <p>Desenvolvido por <a href="">Alisson Moreira</a></p>
     </footer>
+    <script src="javascript/app.js" defer></script>
 </body>
 </html>
