Cria funcionalidade de descriptografar texto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="grupo_botoes">
                     <button class="botao botao_primario" onclick="criptografar()">Criptografar</button>
-                    <button class="botao botao_secundario">Descriptografar</button>
+                    <button class="botao botao_secundario" onclick="descriptografar()">Descriptografar</button>
                 </div>
             </div>
        </section>
