Cria botão com a função de copiar texto

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
        </section>
        <section class="conteudo_saida" id="conteudo_2">
             <textarea name="" id="texto_saida" class="text_area justify_content_space_between" disabled></textarea>
+            <button class="botao botao_secundario" onclick="copiarTexto()">Copiar</button>
        </section>
     </main>
     <footer>
